# llm-recipes-2

./: .gitignore  distill_xrag_complete.ipynb  playground.ipynb  playground2.ipynb  pyproject.toml
configs/: configs_utils.py
data/loaders/: sqaud_v2_sampled4.py  squad-v2-sampled.py
models/: README_XGEMMA.md  distillation_model.py  example_xgemma_usage.py  get_xrag_models.py  modeling_xgemma.py  models_utils.py  xrag_models_utils.py
notebooks/: cleaning_generated_answers.ipynb  complictad_fix_of_gen_answers.ipynb  data_loader_with_xmistral.ipynb  important_xrag_complete_pass.ipynb  preparing_model_to_load.ipynb  sampled4_loader_insp.ipynb  sampling_squadv2_2.ipynb  sampling_squadv2_3.ipynb  sqaud_v2_sampled_2_data_prep.ipynb  testing_xgemma_trainingshot.ipynb
prompt/: prompt.py
train/: train_utils.py
