[project]
name = "llm-recipes-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "datasets==3.6",
    "fire>=0.7.1",
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "numpy>=2.0.2",
    "optimum==1.27",
    "peft==0.9",
    "protobuf>=6.33.0",
    "sentencepiece>=0.2.1",
    "tqdm>=4.67.1",
    "transformers==4.57.1",
    "wandb>=0.22.2",
]
